# devrc-plugin-system-shell

./: Cargo.toml  Devrcfile  README.md  build.rs
.github/workflows/: ci.yml  compile.yml  light_ci.yml  release.yml
src/: lib.rs
